--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "next": "12.0.10",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "remixicon": "^2.5.0",
     "sass": "^1.49.7"
   },
   "devDependencies": {
