--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.9.1",
     "next": "12.0.10",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
